--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
     "url": "git+https://github.com/vagnerbarros/NodeDocker.git"
   },
   "dependencies": {
-    "express": "~4.14.0",
-    "express-handlebars": "~3.0.0"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.14.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.9"
   },
   "author": "",
   "license": "ISC",
