--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,8 @@
 FROM node:10.15.3
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
-
-WORKDIR /home/node/app
-
-COPY package*.json ./
-
-RUN npm install
-
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 COPY . .
-
-COPY --chown=node:node . .
-
-USER node
-
+RUN npm install
 EXPOSE 5000
-
 CMD [ "node", "app.js" ]
