--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
     build: ./backend
     ports:
       - "5000:5000"
+networks:
+  frontend:
+    name: nodedocker
+  backend:
+    name: nodedocker
