--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ version: "3"
 services:
   frontend:
     build: ./frontend
+    expose:
+      - "80"
     ports:
       - "8080:80"
   backend:
     build: ./backend
+    expose:
+      - "5000"
     ports:
       - "5000:5000"
-networks:
-  frontend:
-    name: nodedocker
-  backend:
-    name: nodedocker
