--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "8080:80"
   backend:
     build: ./backend
-    enviroment:
+    environment:
       - API_HOST: "http://127.0.0.1:5000"
     expose:
       - "5000"
