--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: "3"
 
 services:
   frontend:
-    image: frontend
+    image: frontend:1.0
     build: ./frontend
     ports:
       - "80:80"
+    depends_on:
+      - backend
     networks:
       - rede
 
   backend:
-    image: backend
+    image: backend:1.0
     build: ./backend
     ports:
       - "5000:5000"
