--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   frontend:
     image: frontend:1.0
     build: ./frontend
-    container_name: frontend:1.0
+    container_name: frontend
     ports:
       - "80:80"
     depends_on:
@@ -15,7 +15,7 @@ services:
   backend:
     image: backend:1.0
     build: ./backend
-    container_name: backend:1.0
+    container_name: backend
     ports:
       - "5000:5000"
     networks:
