--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     image: backend:1.0
     build: ./backend
     container_name: backend
+    ports:
+      - "5000:5000"
     networks:
       - rede
 networks:
