--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,13 @@ version: "3"
 services:
   frontend:
     image: frontend:1.0
+    deploy:
+      replicas: 2
+      resources:
+        limits:
+          cpus: "0.1"
+          memory: 50M
+      restart_polity: on-failure
     build: ./frontend
     container_name: frontend
     ports:
@@ -14,6 +21,13 @@ services:
 
   backend:
     image: backend:1.0
+    deploy:
+      replicas: 5
+      resources:
+        limits:
+          cpus: "0.1"
+          memory: 50M
+      restart_polity: on-failure
     build: ./backend
     container_name: backend
     ports:
