--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
         limits:
           cpus: "0.1"
           memory: 50M
-      restart_policy: on-failure
+      restart_policy:
+        condition: on-failure
     build: ./frontend
     container_name: frontend
     ports:
@@ -27,7 +28,8 @@ services:
         limits:
           cpus: "0.1"
           memory: 50M
-      restart_policy: on-failure
+      restart_policy:
+        condition: on-failure
     build: ./backend
     container_name: backend
     ports:
