--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,13 @@ services:
       restart_policy:
         condition: on-failure
     build: ./frontend
-    container_name: frontend
+    # container_name: frontend
     ports:
       - "80:80"
     depends_on:
       - backend
     networks:
-      - rede
+      - webnet
 
   backend:
     image: backend:1.0
@@ -31,10 +31,10 @@ services:
       restart_policy:
         condition: on-failure
     build: ./backend
-    container_name: backend
+    # container_name: backend
     ports:
       - "5000:5000"
     networks:
-      - rede
+      - webnet
 networks:
-  rede:
+  webnet:
